--- a/_config.yml
+++ b/_config.yml
@@ -18,4 +18,5 @@ email: benjaminaaronblumer@gmail.com
 profile_picture: assets/images/pp.jpg
 
 # Google Analytics ID
-google_analytics: 
+google_analytics: G-LQXVD5E1G1
+
